--- a/pre/scss/pages/_game-play.scss
+++ b/pre/scss/pages/_game-play.scss
@@ -66,9 +66,10 @@
                 align-items: center;
                 justify-content: center;
                 gap: size(8);
+                transform: rotate(-10deg);
 
                 img {
-                    max-width: size(80);
+                    max-width: size(200);
                     animation: 3s infinite forwards;
 
                     &:nth-child(1) {
@@ -86,9 +87,9 @@
                     }
                 }
 
-                &.dicing {
+                &.playing {
                     img {
-                        animation-duration: .5s;
+                        animation: fliping 4s infinite linear;
                     }
                 }
 
@@ -140,6 +141,7 @@
                         img {
                             max-width: 100%;
                             max-height: 100%;
+                            transform: rotate(-10deg);
 
                             &.bg {
                                 position: absolute;
@@ -224,7 +226,7 @@
                 .selection {
                     div {
                         label {
-                            padding: 0 size(8);
+                            padding: 0 size(16);
 
                             img {
                                 &.bg {
@@ -384,7 +386,7 @@
 
 @keyframes float-1 {
     0% {
-        transform: translate(0, size(20));
+        transform: translate(0, size(0));
     }
 
     50% {
@@ -392,7 +394,7 @@
     }
 
     100% {
-        transform: translate(0, size(20));
+        transform: translate(0, size(0));
     }
 }
 
@@ -406,7 +408,7 @@
     }
 
     75% {
-        transform: translate(0, size(20));
+        transform: translate(0, size(0));
     }
 
     100% {
@@ -420,7 +422,7 @@
     }
 
     50% {
-        transform: translate(0, size(20));
+        transform: translate(0, size(0));
     }
 
     100% {
@@ -447,6 +449,28 @@
 
     100% {
         background-color: rgba(white, 0);
+    }
+}
+
+@keyframes fliping {
+    0% {
+        transform: rotateY(0deg);
+    }
+
+    25% {
+        transform: rotateY(360deg);
+    }
+
+    50% {
+        transform: rotateY(0deg);
+    }
+
+    75% {
+        transform: rotateY(360deg);
+    }
+
+    100% {
+        transform: rotateY(0deg);
     }
 }
 
