--- a/pre/scss/pages/_game.scss
+++ b/pre/scss/pages/_game.scss
@@ -263,6 +263,7 @@
                 display: flex;
                 align-items: center;
                 gap: size(8);
+                max-height: size(56);
 
                 button {
                     padding: size(10);
