--- a/pre/scss/pages/_game-play.scss
+++ b/pre/scss/pages/_game-play.scss
@@ -65,32 +65,11 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                gap: size(8);
-                transform: rotate(-10deg);
+                gap: size(32);
 
                 img {
                     max-width: size(200);
-                    animation: 3s infinite forwards;
-
-                    &:nth-child(1) {
-                        animation-name: float-1;
-                        animation-timing-function: linear;
-                    }
-
-                    &:nth-child(2) {
-                        animation-name: float-2;
-                        animation-timing-function: linear;
-                    }
-
-                    &:nth-child(3) {
-                        animation-name: float-3;
-                    }
-                }
-
-                &.playing {
-                    img {
-                        animation: fliping 4s infinite linear;
-                    }
+                    animation: float 3s infinite forwards linear;
                 }
 
                 &.show {
@@ -211,16 +190,17 @@
     .popUp {
         position: absolute;
 
-        .popUp--content {
-            text-align: center;
-            min-width: calc((size(1440) - size(28)*2) * .6 * .5);
-            // (container - card padding) * game-zone flex * 50%
+        .popUp--container {
+            .popUp--content {
+                text-align: center;
+                min-width: calc((size(1440) - size(28)*2) * .6 * .5);
+                // (container - card padding) * game-zone flex * 50%
+            }
         }
     }
 
-
-    &.guess-the-number,
-    &.higher-number-wins {
+    &.match-the-pirate,
+    &.paper-scissors-stone {
         .play-game {
             .game-content {
                 .selection {
@@ -261,6 +241,83 @@
                         img {
                             max-height: size(56);
                         }
+                    }
+                }
+            }
+        }
+    }
+
+    &.match-the-pirate {
+        .play-game {
+            .game-content {
+                .result {
+                    transform: rotate(-10deg);
+                }
+            }
+        }
+    }
+
+    &.paper-scissors-stone {
+        .play-game {
+            .game-content {
+                .result {
+                    transform: translate(size(-10), size(-10));
+
+                    &.playing {
+                        img {
+                            animation: shaking 1s infinite;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    &.interstellar-connection {
+        .play-game {
+            .game-content {
+                .result {
+                    .swiper {
+                        margin: 0;
+                        max-width: size(200);
+                        height: 100%;
+
+                        .swiper-wrapper {
+                            .swiper-slide {
+                                display: flex;
+                                align-items: center;
+                            }
+                        }
+                    }
+
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        right: 0;
+                        bottom: 0;
+                        background-image: url(../img/game/interstellar-connection/frame.png);
+                        background-size: cover;
+                        background-position: center;
+                        z-index: 1;
+                    }
+                }
+
+                .selection {
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        left: 0;
+                        right: 0;
+                        bottom: 0;
+                        height: size(150);
+                        background: linear-gradient(to bottom, rgba(black, 0) 0%, rgba(black, .8) 100%);
+                        z-index: 0;
+                    }
+
+                    .play {
+                        z-index: 1;
                     }
                 }
             }
@@ -309,7 +366,8 @@
 
     // pad ~ 1024
     @include max-to(pad) {
-        height: auto;
+        height: calc((100svw - size(120) - size(56)) * .6);
+        // (window width - section padding - card padding) * height ratio
 
         .default {
             .game-title {
@@ -349,8 +407,8 @@
         }
 
 
-        &.guess-the-number,
-        &.higher-number-wins {
+        &.match-the-pirate,
+        &.paper-scissors-stone {
             .play-game {
                 .game-content {
                     .selection {
@@ -370,6 +428,32 @@
             }
         }
     }
+
+
+    // small-pad ~ 768
+    @include max-to(small-pad) {
+        height: calc((100svw - size(32) - size(32)) * .6);
+    }
+
+
+    // mobile ~ 516
+    @include max-to(mobile) {
+        .default {
+            .game-title {
+                h3 {
+                    font-size: size(15);
+                }
+            }
+        }
+
+        .popUp {
+            .popUp--container {
+                .popUp--content {
+                    min-width: auto;
+                }
+            }
+        }
+    }
 }
 
 
@@ -384,17 +468,17 @@
     }
 }
 
-@keyframes float-1 {
+@keyframes float {
     0% {
-        transform: translate(0, size(0));
+        transform: translate(0, -5%);
     }
 
     50% {
-        transform: translate(0, size(-20));
+        transform: translate(0, -15%);
     }
 
     100% {
-        transform: translate(0, size(0));
+        transform: translate(0, -5%);
     }
 }
 
@@ -452,25 +536,25 @@
     }
 }
 
-@keyframes fliping {
+@keyframes shaking {
     0% {
-        transform: rotateY(0deg);
+        transform: rotate(10deg) translate(0, -20%);
     }
 
     25% {
-        transform: rotateY(360deg);
+        transform: rotate(-15deg) translate(0, size(0));
     }
 
     50% {
-        transform: rotateY(0deg);
+        transform: rotate(10deg) translate(0, -20%);
     }
 
     75% {
-        transform: rotateY(360deg);
+        transform: rotate(-15deg) translate(0, size(0));
     }
 
     100% {
-        transform: rotateY(0deg);
+        transform: rotate(10deg) translate(0, -20%);
     }
 }
 
