--- a/pre/scss/pages/_game-play.scss
+++ b/pre/scss/pages/_game-play.scss
@@ -199,7 +199,7 @@
         }
     }
 
-    &.match-the-pirate,
+    &.MTP,
     &.paper-scissors-stone {
         .play-game {
             .game-content {
@@ -247,7 +247,7 @@
         }
     }
 
-    &.match-the-pirate {
+    &.MTP {
         .play-game {
             .game-content {
                 .result {
@@ -407,7 +407,7 @@
         }
 
 
-        &.match-the-pirate,
+        &.MTP,
         &.paper-scissors-stone {
             .play-game {
                 .game-content {
