首頁新增成員介紹

--- a/pre/scss/components/_font.scss
+++ b/pre/scss/components/_font.scss
@@ -12,27 +12,33 @@ h6 {
     font-size: size(60);
 }
 
-h1 {
+h1,
+.h1 {
     font-size: size(40);
 }
 
-h2 {
+h2,
+.h2 {
     font-size: size(34);
 }
 
-h3 {
+h3,
+.h3 {
     font-size: size(24);
 }
 
-h4 {
+h4,
+.h4 {
     font-size: size(20);
 }
 
-h5 {
+h5,
+.h5 {
     font-size: size(18);
 }
 
-h6 {
+h6,
+.h6 {
     font-size: size(16);
 }
 
