--- a/pre/scss/layout/_breadcrumb.scss
+++ b/pre/scss/layout/_breadcrumb.scss
@@ -17,7 +17,7 @@
             &::after {
                 font-family: 'Icomoon';
                 content: '\e902';
-                padding-left: size(4);
+                padding: 0 size(4);
             }
         }
     }
