--- a/pre/scss/components/_buttons.scss
+++ b/pre/scss/components/_buttons.scss
@@ -20,7 +20,7 @@ a.button {
     }
 
     &[disabled] {
-        cursor: not-allowed;
+        // cursor: not-allowed;
         background-color: color(gray-8);
         color: color(gray-6);
     }
@@ -59,8 +59,8 @@ a.button {
         }
 
         &[disabled] {
-            border-color: color(gray-6);
-            color: color(gray-6);
+            border-color: rgba(white, .3);
+            color: rgba(white, .3);
             background-color: transparent;
         }
     }
